--- a/assets/scss/styleguide/_styleguide.scss
+++ b/assets/scss/styleguide/_styleguide.scss
@@ -31,7 +31,7 @@ $kss-colors: (
   @return map-get(map-get($kss-colors, $color-name), $tone);
 }
 
-// KSS styles start here
+/* stylelint-disable selector-class-pattern */
 .kss {
   font-family: $montserrat;
   position: relative;
@@ -39,6 +39,7 @@ $kss-colors: (
   color: kss-color('black');
   background-color: darken(color('white'), 2%);
 }
+/* stylelint-enable selector-class-pattern */
 
 .kss-sidebar {
   padding: 0.6em 1em;
@@ -53,7 +54,7 @@ $kss-colors: (
     padding: 3.5em 3.5em 0;
     border-right: 2px solid darken(color('white'), 8%);
     border-bottom: 0;
-    box-shadow: 1px 0 2px 0 rgba(0,0,0,0.05);
+    box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.05);
   }
 }
 
@@ -108,7 +109,7 @@ $kss-colors: (
   width: 120px;
   margin: 3em 0;
   border: 0;
-  border-bottom: 0.2em solid rgba(0,0,0,0.08);
+  border-bottom: 0.2em solid rgba(0, 0, 0, 0.08);
 }
 
 .kss-nav {
@@ -307,7 +308,7 @@ $kss-colors: (
     width: 120px;
     margin: 3em 0;
     border: 0;
-    border-bottom: 0.2em solid rgba(0,0,0,0.08);
+    border-bottom: 0.2em solid rgba(0, 0, 0, 0.08);
   }
 }
 
@@ -332,15 +333,10 @@ $kss-colors: (
   padding: 0.5em;
   border-bottom: 1px solid darken(color('white'), 8%);
   border-left: 1px solid darken(color('white'), 8%);
-  background: white;
+  background-color: color('white');
 }
 
 .kss-modifier__description {
-  // background: color('white');
-  // position: absolute;
-  // top: -1.6em;
-  // left: 2%;
-  // padding: 0.8em 1.8em;
   font-size: 0.9em;
   font-weight: bold;
   margin: -0.8em 0 1em;
